<resources>
    <string name="app_name">MyAnimationApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="vector_drawable_animation">Vector Drawable Animation</string>
    <string name="animals">Animals</string>
    <string name="clock">Clocks</string>
    <string name="checkable">Checkable</string>
    <string name="counter">Digit Counter</string>
    <string name="curvedmotion">Curved motion</string>
    <string name="downloading">Downloading</string>
    <string name="fingerprint">Finger Print</string>
    <string name="handwriting">Handwriting</string>
    <string name="music">Music</string>
    <string name="pathmorph">Path morphing</string>
    <string name="play_pause_stop">Play Pouse Stop</string>
    <string name="progressbar">Progress Bar</string>
    <string name="trimclip">Trims Clips Fills</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="error">Error</string>
    <string name="hippo_text">Hippo</string>
    <string name="buffalo_text">Buffalo</string>
    <string name="elephant_text">Elephant</string>
    <string name="hide_fab">Hide FAB</string>
    <string name="show_fab">Show FAB</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
</resources>
